--- a/popup.html
+++ b/popup.html
@@ -18,14 +18,12 @@ limitations under the License.
 
 <!DOCTYPE html>
 <html>
-  <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Bookmark Viewer</title>
-    <script src="js/popup.js"/> </script>
-  </head>
-  <body>
-<div id="buttonContainer"></div>
-    <button id="sousuoButton">搜索</button>
-    <button id="fuzhiButton">复制</button>
-  </body>
+<head>
+  <title>Text Counter</title>
+  <script src="js/popup.js"></script>
+</head>
+<body>
+  <h1>Word Count</h1>
+  <div id="wordCount"></div>
+</body>
 </html>
