--- a/popup.html
+++ b/popup.html
@@ -23,7 +23,8 @@ limitations under the License.
   <script src="js/popup.js"></script>
 </head>
 <body>
-  <h1>Word Count</h1>
+  <h3>网页分析</h3>
+  <h2>词频</h2>
   <div id="wordCount"></div>
 </body>
 </html>
