--- a/popup.html
+++ b/popup.html
@@ -19,12 +19,17 @@ limitations under the License.
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Text Counter</title>
-  <script src="js/popup.js"></script>
+  <style>
+    body {
+      width: 300px; /* 设置宽度为300像素 */
+    }
+  </style> <script src="js/popup.js"></script>
 </head>
 <body>
   <h3>网页分析</h3>
-  <h2>词频</h2>
+  <h2>词频</h2> 
   <div id="wordCount"></div>
 </body>
 </html>
