--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,9 @@ limitations under the License.
     body {
       width: 300px; /* 设置宽度为300像素 */
     }
+  div {
+    font-size: 16px;
+  }
   </style> <script src="js/popup.js"></script>
 </head>
 <body>
