--- a/popup.html
+++ b/popup.html
@@ -31,6 +31,7 @@ overflow: hidden;
     font-size: 16px;
 color: #213547;
     margin-left: 10px;
+    margin-bottom: 20px;
   }
   p {
 color: #213547;
@@ -40,17 +41,13 @@ color: #213547;
   h3 {
 color: #213547;
     margin-left: 20px;
+    margin-top: 20px;
   }
-  .colored-div {
-  background-color: #e2e2e2;
-  height: 1px;
-}
   </style> 
   <script src="js/popup.js"></script>
 </head>
 <body>
   <h3>网页分析</h3>
-    <div id="fengexian", class="colored-div"></div>
   <p>词频</p> 
   <div id="wordCount"></div>
 </body>
