--- a/popup.html
+++ b/popup.html
@@ -48,6 +48,10 @@ color: #213547;
 </head>
 <body>
   <p>词频</p>
+<div id="specialCharacters">
+  <h2>换行符和空格信息</h2>
+  <div id="specialCharactersInfo"></div>
+</div>
   <div id="wordCount"></div>
 </body>
 </html>
