添加词云图，还没有完成

--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,9 @@ color: #213547;
     margin-top: 15px;
   }
   </style> 
-<script src="js/wordcloud2.min.js"></script>
+<script src="js/d3@5.js"></script>
+<script src="js/d3-cloud@1.js"></script>
+<script src="js/wordcloud.js"></script>
   <script src="js/popup.js"></script>
 </head>
 <body>
