--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,10 @@ limitations under the License.
   <style>
     body {
 overflow: hidden;
-      width: 300px; /* 设置宽度为300像素 */
+      width: 500px; /* 设置宽度为300像素 */
+    }
+    canvas {
+      width: 500px;
     }
   div {
     font-size: 16px;
