--- a/popup.html
+++ b/popup.html
@@ -25,11 +25,13 @@ limitations under the License.
   <style>
     body {
 overflow: hidden;
-      width: 500px; /* 设置宽度为300像素 */
+      width: 700px; /* 设置宽度为300像素 */
     }
-    canvas {
-      width: 500px;
-    }
+  canvas {
+    width: 600px;
+    height: 600px;
+    border: 1px solid black;
+  }
   div {
     font-size: 16px;
 color: #213547;
