--- a/popup.html
+++ b/popup.html
@@ -29,6 +29,7 @@ overflow: hidden;
     }
   canvas {
     border: 1px solid black;
+      width: 700px; /* 设置宽度为300像素 */
   }
   div {
     font-size: 16px;
