添加词云图，还没有完成

--- a/popup.html
+++ b/popup.html
@@ -49,17 +49,13 @@ color: #213547;
     margin-top: 15px;
   }
   </style> 
-<script src="js/d3@5.js"></script>
-<script src="js/d3-cloud@1.js"></script>
-<script src="js/wordcloud.js"></script>
-  <script src="js/popup.js"></script>
 </head>
 <body>
   <h2>词频</h2>
   <div id="specialCharactersInfo"></div>
 </div>
-<canvas id="wordcloud"></canvas>
-  <div id="wordCount"></div>
+<script src="js/js2wordcloud.js"></script>
+<div id="main" style="width: 400px;height: 400px;"></div>
+  <script src="js/popup.js"></script>
 </body>
 </html>
-
