添加词云图，还没有完成

--- a/popup.html
+++ b/popup.html
@@ -28,10 +28,9 @@ overflow: hidden;
       width: 700px; /* 设置宽度为300像素 */
     }
   canvas {
-    border: 1px solid black;
       width: 700px; /* 设置宽度为300像素 */
   }
-  div {
+  .specialCharactersInfo {
     font-size: 16px;
 color: #213547;
     margin-left: 10px;
@@ -52,7 +51,7 @@ color: #213547;
 </head>
 <body>
   <h2>词频</h2>
-  <div id="specialCharactersInfo"></div>
+  <div id="specialCharactersInfo" style="font-size: 16px;color: #213547;margin-left: 10px;margin-bottom: 20px;"></div>
 </div>
 <script src="js/js2wordcloud.js"></script>
 <div id="main" style="width: 400px;height: 400px;"></div>
