添加词云图，还没有完成

--- a/popup.html
+++ b/popup.html
@@ -33,33 +33,27 @@ color: #213547;
     margin-left: 10px;
     margin-bottom: 20px;
   }
-  p {
-color: #213547;
-    font-size: 22px;
-    margin-left: 20px;
-    margin-bottom: 15px;
-  }
   h2 {
 color: #213547;
     margin-left: 10px;
     margin-top: 15px;
   }
   .card {
-  transition: 0.3s;
-  border-radius: 10px; /* 添加圆角 */
+  border-radius: 17px; /* 添加圆角 */
+  height: 34px; /* 添加圆角 */
+    display: inline-block; /* 让卡片宽度随内容变化 */
   background-color: #f0f0f0; /* 设置背景色 */
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .container {
-  padding: 0px;
 }
 
 .huanhangfushuliang {
     font-size: 16px;
+    margin-left: 1px;
 }
 
 
@@ -73,9 +67,7 @@ color: #213547;
 <div id="main" style="width: 700px;height: 400px;"></div>
 <div class="card">
 	<div class="card">
-  <div class="container">
     <p class="huanhangfushuliang">换行符数量</p>
-  </div>
 </div>
 
 
