--- a/popup.html
+++ b/popup.html
@@ -62,7 +62,7 @@ color: #213547;
   </style>
 </head>
 <body>
-  <h2>本网页词频</h2>
+  <h2>本网页频繁出现的词词频</h2>
   <div id="specialCharactersInfo" style="font-size: 16px;color: #213547;margin-left: 10px;margin-bottom: 20px;"></div>
 </div>
 <script src="js/js2wordcloud.js"></script>
