添加关于词频，没做好

--- a/welcome.html
+++ b/welcome.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>词频设置</title>
+  <title>关于获取网页词频</title>
   <link rel="stylesheet" href="layui/css/layui.css">
   <style>
     .layui-card-header {
@@ -28,11 +28,12 @@
       <div class="layui-col-md11">
         <div class="layui-card">
           <div class="layui-card-header">
-            <span class="word-frequency">词频</span>
+            <span class="word-frequency">本网页频繁出现的词词频</span>
           </div>
         </div>
           <div class="layui-card-body">
-            <p>这是一段文字，可以根据需要进行替换</p>
+            <p>本项目原网页分析，基于chrome-extensions-samples-main修改，使用MIT许可开源，是一个Chrome扩展，用来分析网站词频并生成词云图
+重要提示：分析时可能不会获取到所有网站中的文字</p>
           </div>
       </div>
     </div>
