--- a/welcome.html
+++ b/welcome.html
@@ -9,15 +9,33 @@
     margin-top: 5px;
    display: flex;
    align-items: center;     /* 垂直居中 */
-    height: 50px;
+    height: 70px;
     }
     .word-frequency {
-    height: 50px;
+    height: 70px;
       font-size: 24px;
       font-weight: bold;
    display: flex;
    align-items: center;     /* 垂直居中 */
     }
+img {
+   border-radius: 50%;
+}
+h1 {
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+p {
+      font-size: 20px;
+}
+.word-frequency2 {
+    margin-left: 20px;
+      font-size: 30px;
+}
+.kaifazhezhanghao {
+    margin-top: 20px;
+      font-size: 20px;
+}
   </style>
 </head>
 <body>
@@ -28,17 +46,31 @@
       <div class="layui-col-md11">
         <div class="layui-card">
           <div class="layui-card-header">
-            <span class="word-frequency">本网页频繁出现的词词频</span>
+            <span class="word-frequency">关于获取网页词频</span>
           </div>
         </div>
           <div class="layui-card-body">
             <p>本项目原网页分析，基于chrome-extensions-samples-main修改，使用MIT许可开源，是一个Chrome扩展，用来分析网站词频并生成词云图
 重要提示：分析时可能不会获取到所有网站中的文字</p>
+  <h1>源码</h1>
+  <button type="button" class="layui-btn layui-btn-radius" id="gitee">gitee:183600</button>
+  <button type="button" class="layui-btn layui-btn-radius" id="gitee">gitee:183600</button>
+  <h1>开发者</h1>
+<img src="Image_1707828205826.jpg" width="100" />
+            <span class="word-frequency2">qwe12345678</span>
+        <div class="kaifazhezhanghao">
+  <button type="button" class="layui-btn layui-btn-radius" id="gitee">gitee:183600</button>
+  <button type="button" class="layui-btn layui-btn-radius" id="github">github:183600Qwe</button>
+  <button type="button" class="layui-btn layui-btn-radius" id="gitcode">gitcode:qwe12345678</button>
+  <button type="button" class="layui-btn layui-btn-radius" id="QQ">QQ:3025385472</button>
+  <button type="button" class="layui-btn layui-btn-radius" id="kuan">酷安</button>
+          </div>
           </div>
       </div>
     </div>
   </div>
 
   <script src="layui/layui.js"></script>
+  <script src="js/welcome.js"></script>
 </body>
 </html>
