--- a/welcome.html
+++ b/welcome.html
@@ -50,11 +50,11 @@ p {
           </div>
         </div>
           <div class="layui-card-body">
-            <p>本项目原网页分析，基于chrome-extensions-samples-main修改，使用MIT许可开源，是一个Chrome扩展，用来分析网站词频并生成词云图
-重要提示：分析时可能不会获取到所有网站中的文字</p>
+            <p>本项目原网页分析，基于chrome-extensions-samples-main修改，使用MIT许可开源，是一个Chrome扩展，用来分析网站词频并生成词云图</p>
+            <p>重要提示：分析时可能不会获取到所有网站中的文字</p>
   <h1>源码</h1>
-  <button type="button" class="layui-btn layui-btn-radius" id="gitee">gitee:183600</button>
-  <button type="button" class="layui-btn layui-btn-radius" id="gitee">gitee:183600</button>
+  <button type="button" class="layui-btn layui-btn-radius" id="yuanmagitee">gitee项目地址</button>
+  <button type="button" class="layui-btn layui-btn-radius" id="yuanmagitcode">gitcode项目地址</button>
   <h1>开发者</h1>
 <img src="Image_1707828205826.jpg" width="100" />
             <span class="word-frequency2">qwe12345678</span>
@@ -63,7 +63,7 @@ p {
   <button type="button" class="layui-btn layui-btn-radius" id="github">github:183600Qwe</button>
   <button type="button" class="layui-btn layui-btn-radius" id="gitcode">gitcode:qwe12345678</button>
   <button type="button" class="layui-btn layui-btn-radius" id="QQ">QQ:3025385472</button>
-  <button type="button" class="layui-btn layui-btn-radius" id="kuan">酷安</button>
+  <button type="button" class="layui-btn layui-btn-radius" id="kuan">酷安:qwe12345678</button>
           </div>
           </div>
       </div>
