添加关于获取网页词频

--- a/welcome.html
+++ b/welcome.html
@@ -28,6 +28,10 @@ h1 {
 p {
       font-size: 20px;
 }
+.zhongyaotishi {
+      font-size: 20px;
+    margin-bottom: 30px;
+}
 .word-frequency2 {
     margin-left: 20px;
       font-size: 30px;
@@ -51,7 +55,8 @@ p {
         </div>
           <div class="layui-card-body">
             <p>本项目原网页分析，基于chrome-extensions-samples-main修改，使用MIT许可开源，是一个Chrome扩展，用来分析网站词频并生成词云图</p>
-            <p>重要提示：分析时可能不会获取到所有网站中的文字</p>
+            <p class="zhongyaotishi">重要提示：分析时可能不会获取到所有网站中的文字</p>
+  <button type="button" class="layui-btn layui-btn-radius" id="qun">加入QQ群:854260276</button>
   <h1>源码</h1>
   <button type="button" class="layui-btn layui-btn-radius" id="yuanmagitee">gitee项目地址</button>
   <button type="button" class="layui-btn layui-btn-radius" id="yuanmagitcode">gitcode项目地址</button>
