版本更新至2.2

--- a/options（复件）.html
+++ b/options（复件）.html
@@ -18,9 +18,6 @@
         display: flex;
         align-items: center; /* 垂直居中 */
       }
-      .guolvdebiaoti {
-        margin-bottom: 20px;
-      }
       img {
         border-radius: 50%;
       }
@@ -31,9 +28,6 @@
       p {
         font-size: 20px;
         margin-bottom: 20px;
-      }
-      button {
-        margin-top: 10px;
       }
     </style>
   </head>
@@ -48,18 +42,14 @@
             </div>
           </div>
           <div class="layui-card-body">
-<form id="form">
-  <h2 class="guolvdebiaoti">过滤</h2>
-  <textarea id="list" type="text" name="" placeholder="多行文本框" lay-filter="location" lay-affix="location" class="layui-textarea"></textarea>
-<button type="button" class="layui-btn layui-btn-normal layui-btn-radius" id="save">保存</button>
-</form>
-<div class="layui-form">
-  <br>
-    <input type="checkbox" name="agreement" value="1" title="过滤符号" lay-filter="demo-checkbox-filter">
-  <br>
-<ul class="layui-menu-lg">
-    <li><div class="layui-menu-body-title" id="guanyu">关于获取网页词频</div></li>
-</ul>
+            <p>设置没做好</p>
+            <button
+              type="button"
+              class="layui-btn layui-btn-normal layui-btn-radius"
+              id="guanyu"
+            >
+              关于获取网页词频
+            </button>
           </div>
         </div>
       </div>
@@ -69,4 +59,3 @@
     <script src="js/options.js"></script>
   </body>
 </html>
-
