--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,11 @@
   <title>关于获取网页词频</title>
   <link rel="stylesheet" href="layui/css/layui.css">
   <style>
+  body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
     .layui-card-header {
     margin-top: 5px;
    display: flex;
@@ -18,19 +23,35 @@
    display: flex;
    align-items: center;     /* 垂直居中 */
     }
-img {
+    .yizhengpinclassn {
+  display:flex;
+  align-items:center;/*所有子元素都垂直居中了*/
+justify-content: center;
+    height: 200px;
+    }
+    .yizhengpinclassqq {
+  display:flex;
+  align-items:center;/*所有子元素都垂直居中了*/
+justify-content: center;
+    height: 200px;
+    }
+.word-frequency2touxiang {
    border-radius: 50%;
+}
+.zhichi {
+      font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 h1 {
     margin-top: 50px;
     margin-bottom: 20px;
 }
+.tupian {
+   border-radius: 5%;
+}
 p {
       font-size: 20px;
-}
-.zhongyaotishi {
-      font-size: 20px;
-    margin-bottom: 30px;
 }
 .word-frequency2 {
     margin-left: 20px;
@@ -38,6 +59,11 @@ p {
 }
 .kaifazhezhanghao {
     margin-top: 20px;
+      font-size: 20px;
+}
+.qwe12345678banquansuoyou {
+    margin-top: 105px;
+    margin-bottom: 105px;
       font-size: 20px;
 }
   </style>
@@ -50,26 +76,26 @@ p {
       <div class="layui-col-md11">
         <div class="layui-card">
           <div class="layui-card-header">
-            <span class="word-frequency">关于获取网页词频</span>
+            <span class="word-frequency">页析 - 分析网页内容</span>
           </div>
         </div>
-          <div class="layui-card-body">
-            <p>本项目原网页分析，基于chrome-extensions-samples-main修改，使用MIT许可开源，是一个Chrome扩展，用来分析网站词频并生成词云图</p>
-            <p class="zhongyaotishi">重要提示：分析时可能不会获取到所有网站中的文字</p>
-  <button type="button" class="layui-btn layui-btn-radius" id="qun">加入QQ群:854260276</button>
-  <h1>源码</h1>
-  <button type="button" class="layui-btn layui-btn-radius" id="yuanmagitee">gitee项目地址</button>
-  <button type="button" class="layui-btn layui-btn-radius" id="yuanmagitcode">gitcode项目地址</button>
-  <h1>开发者</h1>
-<img src="Image_1707828205826.jpg" width="100" />
-            <span class="word-frequency2">qwe12345678</span>
-        <div class="kaifazhezhanghao">
-  <button type="button" class="layui-btn layui-btn-radius" id="gitee">gitee:183600</button>
-  <button type="button" class="layui-btn layui-btn-radius" id="github">github:183600Qwe</button>
-  <button type="button" class="layui-btn layui-btn-radius" id="gitcode">gitcode:qwe12345678</button>
-  <button type="button" class="layui-btn layui-btn-radius" id="QQ">QQ:3025385472</button>
-  <button type="button" class="layui-btn layui-btn-radius" id="kuan">酷安:qwe12345678</button>
+  <div class="layui-container">
+            <div class="yizhengpinclassqq" id="yizhengpin3" align="center" align-items="center">
+            <div align="center" align-items="center">
+  <h1 align="center">QQ群</h1>
+  <button type="button" class="layui-btn layui-btn-normal layui-btn-radius" id="qun">加入QQ群页析交流群:854260276</button>
           </div>
+            </div>
+            <div class="yizhengpinclassn" id="yizhengpin" align="center" align-items="center">
+            <div align="center" align-items="center">
+  <h1 align="center">源码（除了gitee的可能会很旧）</h1>
+  <button type="button" class="layui-btn layui-btn-normal layui-btn-radius" id="yuanmagitee">gitee项目地址</button>
+  <button type="button" class="layui-btn layui-btn-normal layui-btn-radius" id="yuanmagitcode">gitcode项目地址</button>
+  <button type="button" class="layui-btn layui-btn-normal layui-btn-radius" id="yuanmagiteefirefoxban">gitee项目地址（Firefox版）</button>
+  <button type="button" class="layui-btn layui-btn-normal layui-btn-radius" id="yuanmagitcodefirefoxban">gitcode项目地址（Firefox版）</button>
+            </div>
+            </div>
+            <p class="qwe12345678banquansuoyou" align="center">qwe12345678版权所有</p>
           </div>
       </div>
     </div>
